# Razrabotka_sredstv_zi

./: CMakeLists.txt  CryptoManager.cpp  CryptoManager.h  README.md  cryptomanager.cpp  cryptomanager.h  folderscanner.cpp  folderscanner.h  main.cpp
